--- a/ipyplots/graph.html
+++ b/ipyplots/graph.html
@@ -14,6 +14,7 @@
 
 </style>
 <body>
+<script src="//d3js.org/d3.v3.min.js"></script>
 <svg id="graph" height=500 width=960></svg>
 <script type="text/javascript">
   var graph = $json;
