--- a/ipyplots/graph.html
+++ b/ipyplots/graph.html
@@ -2,85 +2,105 @@
 <meta charset="utf-8">
 <style>
 
-.node {
-  stroke: #fff;
-  stroke-width: 1.5px;
-}
+    .node {
+        stroke: #fff;
+        stroke-width: 1.5px;
+    }
 
-.link {
-  stroke: #999;
-  stroke-opacity: .6;
-}
+    .link {
+        stroke: #999;
+        stroke-opacity: .6;
+    }
 
 </style>
 <body>
 <script src="//d3js.org/d3.v3.min.js"></script>
 <svg id="graph" height=500 width=960></svg>
 <script type="text/javascript">
-  var graph = $json;
+    var graph = $json;
 </script>
 <script type="text/javascript">
+    $(document).ready(function () {
 
-var width = 960,
-    height = 500;
+        var width = 960,
+                height = 500;
 
-var color = d3.scale.category20();
+        var color = d3.scale.category20();
 
-var force = d3.layout.force()
-    .charge(-120)
-    .linkDistance(30)
-    .size([width, height]);
+        var force = d3.layout.force()
+                .charge(-120)
+                .linkDistance(30)
+                .size([width, height]);
 
-var svg = d3.select("#graph")
-    .attr("width", width)
-    .attr("height", height);
+        var svg = d3.select("#graph")
+                .attr("width", width)
+                .attr("height", height);
 
-  force
-      .nodes(graph.nodes)
-      .links(graph.links)
-      .start();
+        force
+                .nodes(graph.nodes)
+                .links(graph.links)
+                .start();
 
-  var link = svg.selectAll(".link")
-      .data(graph.links)
-    .enter().append("line")
-      .attr("class", "link")
-      .style("stroke-width", function(d) { return Math.sqrt(d.value); });
+        var link = svg.selectAll(".link")
+                .data(graph.links)
+                .enter().append("line")
+                .attr("class", "link")
+                .style("stroke-width", function (d) {
+                    return Math.sqrt(d.value);
+                });
 
-  var node = svg.selectAll(".node")
-      .data(graph.nodes)
-    .enter().append("circle")
-      .attr("class", "node")
-      .attr("r", 5)
-      .style("fill", function(d) { return color(d.group); })
-      .call(force.drag);
+        var node = svg.selectAll(".node")
+                .data(graph.nodes)
+                .enter().append("circle")
+                .attr("class", "node")
+                .attr("r", 5)
+                .style("fill", function (d) {
+                    return color(d.group);
+                })
+                .call(force.drag);
 
-  var gnodes = svg.selectAll('g.gnode')
-     .data(graph.nodes)
-     .enter()
-     .append('g')
-     .classed('gnode', true);
-    
-  var node = gnodes.append("circle")
-      .attr("class", "node")
-      .attr("r", 5)
-      .style("fill", function(d) { return color(d.group); })
-      .call(force.drag);
+        var gnodes = svg.selectAll('g.gnode')
+                .data(graph.nodes)
+                .enter()
+                .append('g')
+                .classed('gnode', true);
 
-  var labels = gnodes.append("text")
-      .text(function(d) { return d.id; });
+        var node = gnodes.append("circle")
+                .attr("class", "node")
+                .attr("r", 5)
+                .style("fill", function (d) {
+                    return color(d.group);
+                })
+                .call(force.drag);
+
+        var labels = gnodes.append("text")
+                .text(function (d) {
+                    return d.id;
+                });
 
 
+        force.on("tick", function () {
+            link.attr("x1", function (d) {
+                return d.source.x;
+            })
+                    .attr("y1", function (d) {
+                        return d.source.y;
+                    })
+                    .attr("x2", function (d) {
+                        return d.target.x;
+                    })
+                    .attr("y2", function (d) {
+                        return d.target.y;
+                    });
 
-  force.on("tick", function() {
-    link.attr("x1", function(d) { return d.source.x; })
-        .attr("y1", function(d) { return d.source.y; })
-        .attr("x2", function(d) { return d.target.x; })
-        .attr("y2", function(d) { return d.target.y; });
-
-    node.attr("cx", function(d) { return d.x; })
-        .attr("cy", function(d) { return d.y; });
-  });
-
+            node.attr("cx", function (d) {
+                return d.x;
+            })
+                    .attr("cy", function (d) {
+                        return d.y;
+                    });
+        });
+    }
 </script>
 
 </body>
