--- a/ipyplots/graph.html
+++ b/ipyplots/graph.html
@@ -20,7 +20,7 @@
     var graph = $json;
 </script>
 <script type="text/javascript">
-    $(document).ready(function () {
+   // $(document).ready(function () {
 
         var width = 960,
                 height = 500;
@@ -73,10 +73,14 @@
                 })
                 .call(force.drag);
 
-        var labels = gnodes.append("text")
-                .text(function (d) {
-                    return d.id;
-                });
+
+        node.append("text")
+          .attr("x", 12)
+          .attr("dy", ".35em")
+          .style("font", "10 px ")
+          .style("fill", "black")
+              .style("pointer-events", "none")
+          .text(function(d) { return d.id; });
 
 
         force.on("tick", function () {
@@ -100,7 +104,7 @@
                         return d.y;
                     });
         });
-    }
+    //});
 </script>
 
 </body>
